--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   math_expressions: ^2.4.0
   get: ^4.6.5
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -90,3 +92,15 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/calculator_icon.png"
+
+
+
+
+flutter_native_splash:
+  color: "#E06666"
+  image: "assets/calculator_icon.png"
+  android_gravity: center
